--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@jbuschke/formik-antd": "^0.11.1",
     "antd": "^3.15.2",
     "firebase": "^5.9.1",
-    "lodash": "^4.17.11",
+    "lodash.get": "4.4.2",
+    "formik": "^1.5.2",
     "luxon": "^1.12.1",
     "moment": "^2.24.0",
     "react": "^16.8.5",
@@ -15,7 +17,8 @@
     "react-dom": "^16.8.5",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "PORT=8080 react-scripts start",
