--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@jbuschke/formik-antd": "^0.12.2",
+    "@reach/router": "^1.2.1",
     "antd": "^3.15.2",
     "firebase": "^5.9.1",
-    "lodash.get": "4.4.2",
     "formik": "^1.5.2",
+    "lodash.get": "4.4.2",
     "luxon": "^1.12.1",
     "moment": "^2.24.0",
     "react": "^16.8.5",
@@ -15,8 +16,6 @@
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.8.5",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "yup": "^0.27.0"
   },
