--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "antd": "^3.15.2",
     "firebase": "^5.9.1",
     "formik": "^1.5.2",
+    "instantsearch.css": "^7.3.1",
     "lodash.get": "4.4.2",
+    "lodash.uniqby": "^4.7.0",
     "luxon": "^1.12.1",
     "moment": "^2.24.0",
     "react": "^16.8.5",
@@ -18,6 +20,7 @@
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.8.5",
     "react-idle-timer": "^4.2.5",
+    "react-inlinesvg": "^0.8.4",
     "react-instantsearch-dom": "^5.5.0",
     "react-scripts": "2.1.8",
     "typeface-roboto": "0.0.54",
