--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "name": "dmyk-self",
-  "alias": "dmyk-self",
+  "name": "undefined-pms-web",
+  "alias": "undefined-pms-web",
   "builds": [
     {
       "src": "package.json",
