--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "luxon": "^1.12.1",
     "moment": "^2.24.0",
     "react": "^16.8.5",
-    "react-big-scheduler": "^0.2.6",
-    "react-dnd": "^5.0.0",
-    "react-dnd-html5-backend": "^5.0.1",
+    "react-dnd": "5.0.0",
+    "react-dnd-html5-backend": "5.0.1",
+    "react-big-scheduler": "0.2.6",
     "react-dom": "^16.8.5",
     "react-idle-timer": "^4.2.5",
     "react-inlinesvg": "^0.8.4",
