--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reach/router": "^1.2.1",
     "algoliasearch": "^3.32.1",
     "antd": "^3.15.2",
+    "apexcharts": "^3.8.5",
     "firebase": "^5.9.1",
     "formik": "^1.5.2",
     "instantsearch.css": "^7.3.1",
@@ -16,9 +17,10 @@
     "luxon": "^1.12.1",
     "moment": "^2.24.0",
     "react": "^16.8.5",
+    "react-apexcharts": "^1.3.3",
+    "react-big-scheduler": "0.2.6",
     "react-dnd": "5.0.0",
     "react-dnd-html5-backend": "5.0.1",
-    "react-big-scheduler": "0.2.6",
     "react-dom": "^16.8.5",
     "react-idle-timer": "^4.2.5",
     "react-inlinesvg": "^0.8.4",
