--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.8.5",
     "react-apexcharts": "^1.3.3",
     "react-big-scheduler": "0.2.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dnd": "5.0.0",
     "react-dnd-html5-backend": "5.0.1",
     "react-dom": "^16.8.5",
