--- a/now_dmyk.json
+++ b/now_dmyk.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "name": "undefined-pms-web",
-  "alias": "undefined-pms-web",
+  "name": "dmyk-self",
+  "alias": "dmyk-self",
   "builds": [
     {
       "src": "package.json",
