--- a/now_jhonor.json
+++ b/now_jhonor.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "name": "undefined-pms-web",
-  "alias": "undefined-pms-web",
+  "name": "jhonor-self-check-in",
+  "alias": "jhonor-self-check-in",
   "builds": [
     {
       "src": "package.json",
